--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,10 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "@typescript-eslint/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "warn",
     "prefer-const": "error",
-    "no-var": "error"
+    "no-var": "error",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-html-link-for-pages": "off"
   },
   "ignorePatterns": ["node_modules/", ".next/", "out/"]
 }
