--- a/package.json
+++ b/package.json
@@ -12,36 +12,38 @@
     "seed": "ts-node scripts/seed.ts"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@next/mdx": "^14.0.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.0",
+    "@sendgrid/mail": "^8.1.0",
+    "@types/nodemailer": "^6.4.14",
+    "clsx": "^2.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
+    "next": "^14.0.0",
+    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.7",
-    "@sendgrid/mail": "^8.1.0",
-    "@types/nodemailer": "^6.4.14"
+    "postcss-js": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
-    "eslint-config-next": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "prettier": "^3.0.3",
+    "eslint-config-next": "^14.2.33",
     "jest": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.4",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-node": "^10.9.1"
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
